// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDropdown should render 1`] = `
<div>
  <div>
    <button
      class="user-menu button-root btn btn-unstyled trigger"
      type="button"
    >
      <div
        class="text-truncate"
      >
        <div
          class="sticker sticker-root sticker-static avatar sticker-circle"
        >
          TT
        </div>
        <span
          class="user-name"
        >
          Test Test
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`UserDropdown should render dropdown menu when clicked 1`] = `
<body
  class="dxp"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div>
      <button
        class="user-menu button-root btn btn-unstyled trigger"
        style=""
        type="button"
      >
        <div
          class="text-truncate"
        >
          <div
            class="sticker sticker-root sticker-static avatar sticker-circle"
          >
            TT
          </div>
          <span
            class="user-name"
          >
            Test Test
          </span>
        </div>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu user-menu-dropdown show"
        role="presentation"
        style="left: -995px; top: -999px;"
        tabindex="0"
      >
        <div
          class="transition-carousel-group"
        >
          <div
            class="w-100"
          >
            <ul
              class="list-unstyled"
              role="menu"
            >
              <li
                aria-hidden="true"
                class="dropdown-subheader"
                id="clay-dropdown-menu-group-2"
                role="presentation"
              >
                test@test.com
              </li>
              <li
                role="presentation"
              >
                <ul
                  aria-labelledby="clay-dropdown-menu-group-2"
                  class="list-unstyled"
                  role="group"
                >
                  <li
                    role="presentation"
                  >
                    <span
                      class="dropdown-item"
                      role="menuitem"
                    >
                      <button
                        class="button-root btn btn-block btn-unstyled"
                        type="button"
                      >
                        Language
                      </button>
                    </span>
                  </li>
                  <li
                    role="presentation"
                  >
                    <span
                      class="dropdown-item"
                      role="menuitem"
                    >
                      <a
                        class="button-root btn btn-block btn-unstyled"
                        href="/link-1"
                      >
                        Link 1
                      </a>
                    </span>
                  </li>
                  <li
                    role="presentation"
                  >
                    <span
                      class="dropdown-item"
                      role="menuitem"
                    >
                      <a
                        class="button-root btn btn-block btn-unstyled"
                        href="/link-externo-2"
                      >
                        Link 2
                      </a>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
